2007-10-04  Jonh Wendell <jwendell@gnome.org>
	* src/vinagre-window.c,
	* data/Makefile.am,
	* data/vinagre.svg,
	* data/vinagre.desktop.in.in:
	  - In a near future, we will ship our own icon

2007-10-04  Jonh Wendell <jwendell@gnome.org>

	* lots of files:
	  - Keep recent connections around
	  - Other minor changes

2007-10-04  Jonh Wendell <jwendell@gnome.org>

	* configure.ac,
	* data/vinagre.glade,
	* src/vinagre-tab.c:
	  - Added gnome-keyring support.
	* src/vinagre-favorites.c:
	  - Don't save the password in the favorites file.
	* src/vinagre-window.c:
	  - Avoid a crash when exiting the application with more than one
	    tab opened.

2007-10-04  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c:
	  - Added bell support.

2007-10-03  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c,
	* src/vinagre-tab.h,
	* src/vinagre-ui.h,
	* data/vinagre-ui.xml:
	  - Added clipboard support (copy and paste)
	  - Dropped edit menu, it's not being used anyway.

2007-10-03  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c:
	  - Connect to auth-unsupported signal from gtk-vnc, displaying a
	    message to the user if we don't support the auth type from the
	    server (Closes #478874)

2007-09-18  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-favorites.c:
	  - Fixed a crash when saving to favorites (Closes #477251)

2007-09-17  Jonh Wendell  <jwendell@gnome.org>

	* data/vinagre.desktop.in.in:
	  - Changed .desktop entry to 'Remote Desktop Viewer' (Closes #476951)

2007-09-17  Jonh Wendell  <jwendell@gnome.org>

	* src/*.[ch]:
	  - Updated license header (Closes #477303)

2007-09-17  Jonh Wendell  <jwendell@gnome.org>

	* data/vinagre.glade:
	  - Don't mark some strings for translation (Closes #477300)
	  - Changed min and max port numbers (Closes #477654)

2007-09-17  Jonh Wendell  <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c:
	  - Show tabs in fullscreen mode when ungrab the pointer.
