@@ -1,11 +1,16 @@
-2007-10-04  Jonh Wendell <jwendell@gnome.org>
+2007-10-09  Jonh Wendell <jwendell@gnome.org>
+
+	* lots of files:
+	  - Rename favorites to bookmarks (closes #477504)
+
+2007-10-09  Jonh Wendell <jwendell@gnome.org>
 	* src/vinagre-window.c,
 	* data/Makefile.am,
 	* data/vinagre.svg,
 	* data/vinagre.desktop.in.in:
 	  - In a near future, we will ship our own icon
 
-2007-10-04  Jonh Wendell <jwendell@gnome.org>
+2007-10-09  Jonh Wendell <jwendell@gnome.org>
 
 	* lots of files:
 	  - Keep recent connections around
